# allocators

./: .gitignore  README.md
memory_pool_based_allocator/: CMakeLists.txt  rbrc.sh
memory_pool_based_allocator/src/: CMakeLists.txt  bucket.cpp  bucket.h  memory_pool.h  static_pool_allocator.cpp  static_pool_allocator.h
memory_pool_based_allocator/test/: CMakeLists.txt  different_pool_test.cpp  same_pool_test.cpp
